# simple_gl_raycaster

./: .gitignore  CMakeLists.txt  basic_gl_raycast.sublime-project  basic_gl_raycast.sublime-workspace  main.cpp  raycast_cfd_volume.cpp  raycast_cfd_volume_to_image.cpp  raycast_to_image.cpp  schlieren_raycast.cpp
cmake/: FindArmadillo.cmake  FindBLAS.cmake  FindFLANN.cmake  FindLIBIGL.cmake
gl/: Cube.cpp  Cube.hpp  GLSetup.cpp  GLSetup.hpp  GLStructs.hpp  GLUtil.cpp  GLUtil.hpp  ScreenQuad.cpp  ScreenQuad.hpp  Shader.hpp  Shadinclude.hpp  Textures.cpp  Textures.hpp  ViewControls.hpp
helpers/: mouse_and_keyboard_callbacks.cpp  mouse_and_keyboard_callbacks.hpp  util.hpp
resources/shaders/: copy_volume.vert  gaussian_smoothing.vert  point.frag  point.vert  point_to_uv.vert  raycast.vert  raycast_cfd.frag  raycast_occupancy.frag  raycast_orthogonal.frag  raycast_orthogonal_cfd.frag  schlieren_raycast.vert  texture_passthrough.vert
volume/: volume_loader_raw.hpp
